--- a/src/Components/Review/ReviewControlPanel.scss
+++ b/src/Components/Review/ReviewControlPanel.scss
@@ -1,11 +1,66 @@
 .review-control-panel-box {
-    &__search {
+    margin: 10px 0 10px 0;
+    width: 100%;
+    display: flex;
+   justify-content: end;
 
+    &__input-search {
+        border: none;  
+        &::placeholder {
+          color: #dcdcdc;
+          font-size: 14px;
+          font-weight: 600;
+        }
     }
+
+    &__search-box {
+        display: flex;
+        align-items: center;
+        height: 50px;
+        width: 50px;
+        padding: 10px;
+        border: none;
+        font-size: 16px;
+        background-color: #ffffff;
+        border-radius: 30px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: width 2s ease-in-out;
+    }
+
+    &__search-box:hover {
+       width: 70%;
+       input[type="text"] {
+        width:100%;
+        }
+    }
+
+    input[type="text"]  {
+        width: 0px;
+        background-color: transparent;
+        transition: width 2s ease-in-out;
+    }
+
+    // input[type="text"]:hover  {
+    //     width:100%;
+    // }
+
+    &__search-button{
+        width: 50px;
+        height: 40px;
+        border-style: none;
+        font-size: 10px;
+        font-weight: bold;
+        outline: none;
+        cursor: pointer;
+        border-radius: 50%;
+        background-color: white;
+    } 
+
     &__filter{
 
     }
     &__sort-by {
         
     }
+
 }
